// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Least recently used: Least recently updated 1`] = `
[
  0,
  1,
  2,
  3,
  4,
  50,
  51,
  52,
  53,
  54,
  5,
  6,
  7,
  8,
  9,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
]
`;

exports[`Least recently used: Zero cap 1`] = `"Capacity can't be equal to zero"`;

exports[`Least recently used: basic workflow 1`] = `
[
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
]
`;

exports[`Least recently used: memoization: \`leavesPerStorageLimit\` 1`] = `[]`;

exports[`Least recently used: memoization: \`leavesPerStorageLimit\` 2`] = `[]`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 1`] = `[]`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 2`] = `[]`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 3`] = `
[
  "0-3",
  "0-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 4`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 5`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 6`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 7`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
  "4-3",
  "4-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 8`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
  "4-3",
  "4-2",
  "5-3",
  "2-0",
  "2-1",
  "5-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 9`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
  "4-3",
  "4-2",
  "5-3",
  "2-0",
  "2-1",
  "5-2",
  "6-3",
  "6-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 10`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
  "4-3",
  "4-2",
  "5-3",
  "2-0",
  "2-1",
  "5-2",
  "6-3",
  "6-2",
  "7-3",
  "3-0",
  "3-1",
  "7-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit\` 1`] = `[]`;

exports[`Least recently used: memoization: \`totalLeavesLimit\` 2`] = `
[
  0,
  10,
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit\` 3`] = `
[
  0,
  10,
  4,
  3,
  2,
  1,
  0,
]
`;

exports[`Least recently used: memoization: \`totalStoragesLimit\` 1`] = `
[
  "root-0",
  "0",
  "root-1",
  "1",
  "root-2",
  "2",
  "root-3",
  "3",
  "root-4",
  "4",
  "root-5",
  "5",
]
`;

exports[`Least recently used: memoization: \`totalStoragesLimit\` 2`] = `
[
  "root-0",
  "0",
  "root-1",
  "1",
  "root-2",
  "2",
  "root-3",
  "3",
  "root-4",
  "4",
  "root-5",
  "5",
  "root-6",
  "6",
  "root-10",
  "10",
  "root-9",
  "9",
  "root-8",
  "8",
  "root-7",
  "7",
  "root-6",
  "6",
  "root-5",
  "5",
  "root-4",
  "4",
]
`;

exports[`Least recently used: memoization: \`totalStoragesLimit\` 3`] = `
[
  "root-0",
  "0",
  "root-1",
  "1",
  "root-2",
  "2",
  "root-3",
  "3",
  "root-4",
  "4",
  "root-5",
  "5",
  "root-6",
  "6",
  "root-10",
  "10",
  "root-9",
  "9",
  "root-8",
  "8",
  "root-7",
  "7",
  "root-6",
  "6",
  "root-5",
  "5",
  "root-4",
  "4",
  "root-3",
  "3",
  "root-2",
  "2",
  "root-1",
  "1",
  "root-0",
  "0",
  "root-5",
  "5",
  "root-6",
  "6",
  "root-7",
  "7",
  "root-8",
  "8",
  "root-9",
  "9",
  "root-10",
  "10",
]
`;
